chore: HtmlWebpackPlugin 사용 테스트

--- a/code_splitting/index.html
+++ b/code_splitting/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CSS & Libraries Code Splitting</title>
+    <title>CSS & Libraries Code Splitting <%= env %></title>
     <link rel="stylesheet" href="dist/main.css">
   </head>
   <body>
